--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,4 @@
-= dashboard
+Dashboard  
 
-Description goes here
+Небольшой плагин для Redmine, представляющий из себя дашборд, похожий на kanban доску  
+Для каждого статуса формируется отдельная колонка, которая содержит в себе список задач с этим статусом
