--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,3 +2,4 @@ ru:
   top_menu_item_title: "Панель задач"
   settings_header: "Цвета заголовков колонок статусов"
   executor_not_set: "Не установлен"
+  label_all: "Все"
