--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,5 +2,7 @@ ru:
   top_menu_item_title: "Панель задач"
   settings_header_statuses: "Цвета заголовков колонок статусов"
   settings_header_projects: "Цвета проектов"
+  settings_header_other: "Разное"
+  settings_enable_drag_and_drop: 'Включить "drag and drop" изменение статуса'
   executor_not_set: "Не установлен"
   label_all: "Все"
