--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,6 @@
 ru:
   top_menu_item_title: "Панель задач"
-  settings_header_statuses: "Цвета заголовков колонок статусов"
+  settings_header_statuses: "Цвета статусов"
   settings_header_projects: "Цвета проектов"
   settings_header_other: "Разное"
   settings_enable_drag_and_drop: 'Включить "drag and drop" изменение статуса'
