--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   settings_header_statuses: "Statuses colors"
   settings_header_projects: "Projects colors"
   settings_header_other: "Other"
+  settings_use_drop_down_menu: 'Use drop-down menu for the project choosing'
   settings_display_closed_statuses: 'Display "closed" statuses'
   settings_display_minimized_closed_issue_cards: 'Display minimized "closed" issue cards'
   settings_enable_drag_and_drop: 'Enable "drag and drop" status changing'
