--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,7 +5,8 @@ en:
   settings_header_other: "Other"
   settings_use_drop_down_menu: 'Use drop-down menu for the project choosing'
   settings_display_closed_statuses: 'Display "closed" statuses'
+  settings_display_child_projects_tasks: 'Display child projects tasks'
   settings_display_minimized_closed_issue_cards: 'Display minimized "closed" issue cards'
-  settings_enable_drag_and_drop: 'Enable "drag and drop" status changing'
+  settings_enable_drag_and_drop: '"Drag and drop" status changing'
   executor_not_set: "Not set"
   label_all: "All"
