--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,8 @@ ru:
   settings_header_other: "Разное"
   settings_use_drop_down_menu: 'Использовать выпадающий список для выбора проекта'
   settings_display_closed_statuses: 'Отображать "закрытые" статусы'
+  settings_display_child_projects_tasks: 'Отображать задачи дочерних проектов'
   settings_display_minimized_closed_issue_cards: 'Отображать свернутые карточки "закрытых" задач'
-  settings_enable_drag_and_drop: 'Включить "drag and drop" изменение статуса'
+  settings_enable_drag_and_drop: '"Drag and drop" изменение статуса'
   executor_not_set: "Не установлен"
   label_all: "Все"
