--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,4 +11,4 @@ en:
   settings_generate_colors: "Generate colors"
   executor_not_set: "Not set"
   label_all: "All"
-  project_denylist: "Ignore projects (enter with , between names)"
+  project_denylist: "Ignore projects (enter with , between identifiers)"
