--- a/config/locales/hr.yml
+++ b/config/locales/hr.yml
@@ -5,7 +5,7 @@ hr:
   settings_header_other: "Ostale postavke"
   settings_use_drop_down_menu: 'Koristi padajući izbornik za odabir projekata'
   settings_display_closed_statuses: 'Prikaži zatvorene predmete'
-  settings_display_child_projects_tasks: 'Prikaži child projects tasks'
+  settings_display_child_projects_tasks: 'Prikaži ugniježdene predmete'
   settings_display_minimized_closed_issue_cards: 'Prikaži zatvorene predmete minimizirane'
   settings_enable_drag_and_drop: 'Dozvoli "Drag and drop" izmjenu statusa'
   settings_generate_colors: "Generiraj boje"
