--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -6,7 +6,7 @@ pt_BR:
   settings_use_drop_down_menu: 'Use um menu drop-down para escolha de projeto'
   settings_display_closed_statuses: 'Mostrar tarefas com situação "FECHADO"'
   settings_display_child_projects_tasks: 'Mostrar tarefas filhas dos projetos'
-  settings_display_minimized_closed_issue_cards: 'Mostrar minizados os cartões de tarefas fechadas"
+  settings_display_minimized_closed_issue_cards: 'Mostrar minizados os cartões de tarefas fechadas'
   settings_enable_drag_and_drop: 'Mudar situação com "Drag and drop"'
   settings_generate_colors: "Gerar as cores"
   executor_not_set: "Não definido"
