--- a/config/locales/hr.yml
+++ b/config/locales/hr.yml
@@ -3,10 +3,11 @@ hr:
   settings_header_statuses: "Boje statusa"
   settings_header_projects: "Boje projekata"
   settings_header_other: "Ostale postavke"
-  settings_use_drop_down_menu: 'Koristi padajući izbornik za odabir projekata'
-  settings_display_closed_statuses: 'Prikaži zatvorene predmete'
-  settings_display_child_projects_tasks: 'Prikaži ugniježdene predmete'
-  settings_display_minimized_closed_issue_cards: 'Prikaži zatvorene predmete minimizirane'
+  settings_use_drop_down_menu: "Koristi padajući izbornik za odabir projekata"
+  settings_display_closed_statuses: "Prikaži zatvorene predmete"
+  settings_display_child_projects_tasks: "Prikaži ugniježdene predmete"
+  settings_display_open_projects_only: 'Prikaži samo projekte sa statusom "otvoreno"'
+  settings_display_minimized_closed_issue_cards: "Prikaži zatvorene predmete minimizirane"
   settings_enable_drag_and_drop: 'Dozvoli "Drag and drop" izmjenu statusa'
   settings_generate_colors: "Generiraj boje"
   executor_not_set: "Nije postavljen"
