--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,9 +3,10 @@ ru:
   settings_header_statuses: "Цвета статусов"
   settings_header_projects: "Цвета проектов"
   settings_header_other: "Разное"
-  settings_use_drop_down_menu: 'Использовать выпадающий список для выбора проекта'
+  settings_use_drop_down_menu: "Использовать выпадающий список для выбора проекта"
   settings_display_closed_statuses: 'Отображать "закрытые" статусы'
-  settings_display_child_projects_tasks: 'Отображать задачи дочерних проектов'
+  settings_display_child_projects_tasks: "Отображать задачи дочерних проектов"
+  settings_display_open_projects_only: "Отображать только проекты со статусом «открыто»"
   settings_display_minimized_closed_issue_cards: 'Отображать свернутые карточки "закрытых" задач'
   settings_enable_drag_and_drop: '"Drag and drop" изменение статуса'
   settings_generate_colors: "Сгенерировать цвета"
